Fix overlapping subtitle and paragraph text. (#3818)
Elements of class `tab-subtitle` had `margin-bottom: -1rem;`, causing
overlap with the text below. We increase margin-bottom to prevent
overlap.

--- a/web/src/components/pages/about/playbook.css
+++ b/web/src/components/pages/about/playbook.css
@@ -96,7 +96,7 @@
         }
 
         .tab-subtitle {
-            margin-bottom: -1rem;
+            margin-bottom: 1rem;
         }
 
         .button {
